fixing dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 html, body {
   margin: 0;
   padding: 0;
-  overflow-x: hidden; /* To prevent horizontal scrolling */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
-
+/* Force Dark Mode */
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --foreground-rgb: 255, 255, 255; /* White text */
+  --background-start-rgb: 0, 0, 0; /* Black background */
+  --background-end-rgb: 0, 0, 0; /* Black background */
 }
 
 body {
